--- a/app/views/notes/personal_list.html.erb
+++ b/app/views/notes/personal_list.html.erb
@@ -6,7 +6,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Notes</h1>
+<h1>personal list</h1>
 <div class="media">
   <div class="media-body">
 <table class="table table-hover">
@@ -16,23 +16,20 @@
       <th>Description</th>
       <th>User</th>
       <th>Selector</th>
-      <th colspan="8" style ="padding-left: 266px"> Action</th>
+      <th colspan="3"> Action</th>
     </tr>
   </thead>
 
   <tbody>
     <%# raise current_user.inspect%>
-    <% @notes.each do |note| %>
-   
+    <% @note_personal_lists.each do |note| %>
+    <%#= raise @notes.inspect%>
+    <% #@notes.each do |note| %>
       <tr>
         <td><%= note.name %></td>
         <td><%= note.description %></td>
         <td><%= note.user_id %></td>
         <td><%= note.selector %></td>
-        <%#= note.input :selector, collection: enum_collection_for_select(note.selector), selected: @user.selector %>
-        <td><%#= link_to 'report' , notes_report_list_path, class:'btn btn-mini btn-info'%></td>
-        <td><%#= link_to 'task', notes_task_list_path, class:'btn btn-mini btn-info'%></td>
-        <td><%#= link_to 'personal',notes_personal_list_path, class:'btn btn-mini btn-info'%></td>
         <td><%= link_to 'Show', note , class:'btn btn-mini btn-info'%> |
         <%= link_to 'Edit', edit_note_path(note), class:'btn btn-mini btn-success' %> |
         <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-mini btn-danger' %></td>
@@ -42,10 +39,6 @@
 </table>
 </div>
 </div>
-
-
-<br>
 <%= link_to 'New Notes', new_note_path, class:'btn btn-mini btn-warning' %>|
-<%= link_to 'report' , report_list_path, class:'btn btn-mini btn-danger'%>|
-<%= link_to 'task', task_list_path, class:'btn btn-mini btn-success'%>|
-<%= link_to 'personal',personal_list_path, class:'btn btn-mini btn-primary'%>|
+<%= link_to 'list of notes', notes_path, class:'btn btn-mini btn-info' %>|
+<%= link_to 'Back', notes_path, class:'btn btn-mini btn-dark' %>|
