--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -18,5 +18,8 @@
 
 <%= link_to 'Edit', edit_note_path(@note), class:'btn btn-mini btn-dark' %> |
 <%= link_to 'list of notes', notes_path, class:'btn btn-mini btn-info' %>|
-<%= link_to 'New Notes', new_note_path, class:'btn btn-mini btn-warning' %>
+<%= link_to 'New Notes', new_note_path, class:'btn btn-mini btn-warning' %>|
+<%= link_to 'report' , report_list_path, class:'btn btn-mini btn-danger'%>|
+<%= link_to 'task', task_list_path, class:'btn btn-mini btn-success'%>|
+<%= link_to 'personal',personal_list_path, class:'btn btn-mini btn-primary'%>|
 </div>
