--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,14 +3,17 @@
   <div class="card-header">
      <% if user_signed_in? %>
       <p><%= link_to 'Create notes New', new_note_path ,class:'btn btn-mini btn-primary' %></p> |
-      <%= link_to 'Notes list', notes_path , class:'btn btn-mini btn-dark'%>|
+      <%= link_to 'Notes list', notes_path , class:'btn btn-mini btn-success'%>|
     <% else %>
       <p><%= link_to 'Register Now', new_user_registration_path , class:'btn btn-mini btn-info'%></p>
     <% end %>
   </div>
   <div class="card-body">
     <h5 class="card-title">
-      <li><%= link_to 'Home', root_path, class:'btn btn-mini btn-info' %></li>
+      <li><%= link_to 'Home', root_path, class:'btn btn-mini btn-info' %></li><hr>
+      <li><%= link_to 'report' , report_list_path, class:'btn btn-mini btn-dark'%></li><hr>
+        <li><%= link_to 'task', task_list_path, class:'btn btn-mini btn-warning'%></li><hr>
+        <li><%= link_to 'personal',personal_list_path, class:'btn btn-mini btn-primary'%></li><hr>
 
     </h5>
     <p class="card-text ">
