--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -3,4 +3,4 @@
 
 <%= render 'form', note: @note %><br>
 
-<%= link_to 'Back', notes_path, class:'btn btn-mini btn-dark' %>
+<%= link_to 'Back to list', notes_path, class:'btn btn-mini btn-dark' %>
