--- a/app/views/notes/personal_list.html.erb
+++ b/app/views/notes/personal_list.html.erb
@@ -16,6 +16,7 @@
       <th>Description</th>
       <th>User</th>
       <th>Selector</th>
+      <th>Category_type</th>
       <th colspan="3"> Action</th>
     </tr>
   </thead>
@@ -23,13 +24,12 @@
   <tbody>
     <%# raise current_user.inspect%>
     <% @note_personal_lists.each do |note| %>
-    <%#= raise @notes.inspect%>
-    <% #@notes.each do |note| %>
       <tr>
         <td><%= note.name %></td>
         <td><%= note.description %></td>
         <td><%= note.user_id %></td>
         <td><%= note.selector %></td>
+         <td><%= Category.find(note.category_id).name %></td>
         <td><%= link_to 'Show', note , class:'btn btn-mini btn-info'%> |
         <%= link_to 'Edit', edit_note_path(note), class:'btn btn-mini btn-success' %> |
         <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-mini btn-danger' %></td>
