--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -17,6 +17,8 @@
       <th>User</th>
      <th>Selector</th> 
       <th>Category Type</th>
+      <!-- <th>ID</th> -->
+      
       <th colspan="8" style ="padding-left: 266px"> Action</th>
     </tr>
   </thead>
@@ -31,6 +33,8 @@
         <td><%= note.user_id %></td>
         <td><%= note.selector %></td> 
         <td><%= Category.find(note.category_id).name %></td>
+        <td><%#= note.profiles.title %></td>
+       
         <%#= note.input :selector, collection: enum_collection_for_select(note.selector), selected: @user.selector %>
         <td><%#= link_to 'report' , notes_report_list_path, class:'btn btn-mini btn-info'%></td>
         <td><%#= link_to 'task', notes_task_list_path, class:'btn btn-mini btn-info'%></td>
@@ -51,3 +55,5 @@
 <%= link_to 'report' , report_list_path, class:'btn btn-mini btn-danger'%>|
 <%= link_to 'task', task_list_path, class:'btn btn-mini btn-success'%>|
 <%= link_to 'personal',personal_list_path, class:'btn btn-mini btn-primary'%>|
+
+        
